@@ -40,63 +40,63 @@
 
 #include "skinops.h"
 
-#if defined(__MACOSX__) || defined(__WIN32__)
-#define bswap_32(a) (a >> 24) | ((a & 0xff0000) >> 16) << 8 | ((a & 0xff00) >> 8) << 16 | (a & 0xff) << 8
-#endif /* __MACOSX__ || __WIN32__ */
-
-SKIN_INFOS skin_infos = { 0 };
-static int skin_loaded = 0;
-
 /*
 	Read skin informations (header)
 */
-int skin_read_header(const char *filename, SKIN_INFOS* si)
+int skin_read_header(SKIN_INFOS *si, const char *filename)
 {
 	FILE *fp = NULL;
   	int i;
   	uint32_t endian;
   	uint32_t jpeg_offset;
   	uint32_t length;
+
+	printf("-> skin_read_header\n");
   
 	fp = fopen(filename, "rb");
   	if (fp == NULL)
-    	{
-      		fprintf(stderr, "Unable to open this file: <%s>\n", filename);
-      		return -1;
-    	}
+    {
+      	fprintf(stderr, "Unable to open this file: <%s>\n", filename);
+      	return -1;
+    }
  
 	/* offsets */
   	fseek(fp, 16, SEEK_SET);  
   	fread(&endian, 4, 1, fp);
   	fread(&jpeg_offset, 4, 1, fp);
+
 	if (endian != ENDIANNESS_FLAG)
-		jpeg_offset = bswap_32(jpeg_offset);
+		jpeg_offset = GUINT32_SWAP_LE_BE(jpeg_offset);
 
 	/* Skin name */
   	fread(&length, 4, 1, fp);
 	if (endian != ENDIANNESS_FLAG)
-		length = bswap_32(length);
+		length = GUINT32_SWAP_LE_BE(length);
+
   	if (length > 0)
-    	{
-      		si->name = (char *)malloc(length + 1);
-	      	if (si->name == NULL)
+    {
+      	si->name = (char *)malloc(length + 1);
+	    if (si->name == NULL)
 			return -1;
-	      	memset(si->name, 0, length + 1);
-	      	fread(si->name, length, 1, fp);
-    	}
+
+	    memset(si->name, 0, length + 1);
+	    fread(si->name, length, 1, fp);
+    }
 	
 	/* Skin author */
   	fread(&length, 4, 1, fp);
 	if (endian != ENDIANNESS_FLAG)
-		length = bswap_32(length);
+		length = GUINT32_SWAP_LE_BE(length);
+
   	if (length > 0)
-    	{
-      		si->author = (char *)malloc(length + 1);
-      		if (si->author == NULL)
+    {
+      	si->author = (char *)malloc(length + 1);
+      	if (si->author == NULL)
 			return -1;
-      		memset(si->author, 0, length + 1);
-      		fread(si->author, length, 1, fp);
-    	}
+
+      	memset(si->author, 0, length + 1);
+      	fread(si->author, length, 1, fp);
+    }
 
 	/* LCD colors */
   	fread(&si->colortype, 4, 1, fp);
@@ -115,48 +115,49 @@ int skin_read_header(const char *filename, SKIN_INFOS* si)
 	/* Number of RECT struct to read */
   	fread(&length, 4, 1, fp);
 	if (endian != ENDIANNESS_FLAG)
-		length = bswap_32(length);
+		length = GUINT32_SWAP_LE_BE(length);
+
   	if (length > SKIN_KEYS)
     		return -1;
 
   	for (i = 0; i < (int)length; i++)
-    	{
-      		fread(&si->keys_pos[i].left, 4, 1, fp);
-      		fread(&si->keys_pos[i].top, 4, 1, fp);
-      		fread(&si->keys_pos[i].right, 4, 1, fp);
-      		fread(&si->keys_pos[i].bottom, 4, 1, fp);
-    	}
+    {
+      	fread(&si->keys_pos[i].left, 4, 1, fp);
+      	fread(&si->keys_pos[i].top, 4, 1, fp);
+      	fread(&si->keys_pos[i].right, 4, 1, fp);
+      	fread(&si->keys_pos[i].bottom, 4, 1, fp);
+    }
 
 	if (endian != ENDIANNESS_FLAG)
 	{
-		si->colortype = bswap_32(si->colortype);
-		si->lcd_white = bswap_32(si->lcd_white);
-		si->lcd_black = bswap_32(si->lcd_black);
+		si->colortype = GUINT32_SWAP_LE_BE(si->colortype);
+		si->lcd_white = GUINT32_SWAP_LE_BE(si->lcd_white);
+		si->lcd_black = GUINT32_SWAP_LE_BE(si->lcd_black);
       
-		si->lcd_pos.top = bswap_32(si->lcd_pos.top);
-		si->lcd_pos.left = bswap_32(si->lcd_pos.left);
-		si->lcd_pos.bottom = bswap_32(si->lcd_pos.bottom);
-		si->lcd_pos.right = bswap_32(si->lcd_pos.right);
+		si->lcd_pos.top = GUINT32_SWAP_LE_BE(si->lcd_pos.top);
+		si->lcd_pos.left = GUINT32_SWAP_LE_BE(si->lcd_pos.left);
+		si->lcd_pos.bottom = GUINT32_SWAP_LE_BE(si->lcd_pos.bottom);
+		si->lcd_pos.right = GUINT32_SWAP_LE_BE(si->lcd_pos.right);
 
 		for (i = 0; i < (int)length; i++)
 		{
-			si->keys_pos[i].top = bswap_32(si->keys_pos[i].top);
-			si->keys_pos[i].bottom = bswap_32(si->keys_pos[i].bottom);
-			si->keys_pos[i].left = bswap_32(si->keys_pos[i].left);
-			si->keys_pos[i].right = bswap_32(si->keys_pos[i].right);
+			si->keys_pos[i].top = GUINT32_SWAP_LE_BE(si->keys_pos[i].top);
+			si->keys_pos[i].bottom = GUINT32_SWAP_LE_BE(si->keys_pos[i].bottom);
+			si->keys_pos[i].left = GUINT32_SWAP_LE_BE(si->keys_pos[i].left);
+			si->keys_pos[i].right = GUINT32_SWAP_LE_BE(si->keys_pos[i].right);
 		}
 	}
     	
-    	fclose(fp);
-  	
-    	return 0;
+    fclose(fp);
+
+    return 0;
 }
 
 
 /*
 	Read skin image (pure jpeg data)
 */
-int skin_read_image(const char *filename, SKIN_INFOS* si)
+int skin_read_image(SKIN_INFOS *si, const char *filename)
 {
     FILE *fp = NULL;
     char pattern[] = "fnXXXXXX";
@@ -173,13 +174,16 @@ int skin_read_image(const char *filename, SKIN_INFOS* si)
 	double s;
 	int lcd_w, lcd_h;
     GdkPixbuf *tmp;
+
+	printf("-> skin_read_image\n");
 	
 	// set lcd size
 	if(!strcmp(si->calc, SKIN_TI89))
 	{
 		lcd_w = 160;
 		lcd_h = 100;
-	} else
+	} 
+	else
 	{
 		lcd_w = 240;
 		lcd_h = 128;
@@ -197,11 +201,12 @@ int skin_read_image(const char *filename, SKIN_INFOS* si)
   	fread(&endian, 4, 1, fp);
   	fread(&jpeg_offset, 4, 1, fp);
 	if (endian != ENDIANNESS_FLAG)
-		jpeg_offset = bswap_32(jpeg_offset);
+		jpeg_offset = GUINT32_SWAP_LE_BE(jpeg_offset);
 	fseek(fp, jpeg_offset, SEEK_SET);
 
     // Extract image from skin by creating a temp file
     tmpname = mktemp(pattern);
+	fprintf(stdout, "<%s> <%s>\n", g_get_current_dir(), tmpname);
     ft = fopen(tmpname, "wb");
     if(ft == NULL) 
     {
@@ -219,10 +224,10 @@ int skin_read_image(const char *filename, SKIN_INFOS* si)
     si->image = gdk_pixbuf_new_from_file(tmpname, &error);
     if (si->image == NULL) 
     {
-      fprintf(stderr, "Failed to load pixbuf file: %s: %s\n", tmpname, error->message);
-      g_error_free(error);
-      unlink(tmpname);
-      return -1;
+		fprintf(stderr, "Failed to load pixbuf file: %s: %s\n", tmpname, error->message);
+		g_error_free(error);
+		unlink(tmpname);
+		return -1;
     }
 
 	// Rescale image if needed (fixed LCD size)
@@ -269,11 +274,13 @@ int skin_read_image(const char *filename, SKIN_INFOS* si)
 }
 
 /* Load a skin (TiEMu v2.00 only) */
-int skin_load(const char *filename)
+int skin_load(SKIN_INFOS *si, const char *filename)
 {
 	FILE *fp = NULL;
   	char buf[17];
   	int ret = 0;
+
+	printf("-> skin_read_load\n");
 
   	fp = fopen(filename, "rb");
   	if (fp == NULL)
@@ -291,28 +298,30 @@ int skin_load(const char *filename)
 
 	fclose(fp);
   	
-  	ret = skin_read_header(filename, &skin_infos);
-  	ret = skin_read_image(filename, &skin_infos);
+  	ret = skin_read_header(si, filename);
+  	ret = skin_read_image(si, filename);
 
 	if(!ret)
-   		fprintf(stdout, "loading skin: %s (%d x %d) %s\n", g_basename(filename), skin_infos.width, skin_infos.height, buf);
+   		fprintf(stdout, "loading skin: %s (%d x %d) %s\n", g_basename(filename), si->width, si->height, buf);
   
   	return ret;
 }
 
 /* Unload skin by freeing allocated memory */
-int skin_unload(void)
+int skin_unload(SKIN_INFOS *si)
 {
-    if(skin_infos.image != NULL)
+	printf("-> skin_unload\n");
+
+    if(si->image != NULL)
     {
-        g_object_unref(skin_infos.image);
-        skin_infos.image = NULL;
+        g_object_unref(si->image);
+        si->image = NULL;
     }
 
-  	free(skin_infos.name);
-  	free(skin_infos.author);
+  	free(si->name);
+  	free(si->author);
 
-  	memset(&skin_infos, 0, sizeof(SKIN_INFOS));
+  	memset(si, 0, sizeof(SKIN_INFOS));
   
   	return 0;
 }
